# sympp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SymPPConfig.cmake.in  _config.yml
.github/workflows/: build.yml  toc.yml
cmake/: CPM.cmake
examples/: CMakeLists.txt  hello_world.cpp  main.cpp  operations.cpp
source/: CMakeLists.txt
source/sympp/: CMakeLists.txt  sympp.h
source/sympp/core/: internal_node_interface.h  node_interface.cpp  node_interface.h  sym.cpp  sym.h  sym_error.cpp  sym_error.h  terminal_node_interface.h
source/sympp/functions/: mathematics.cpp  mathematics.h  operators.cpp  operators.h  symbolic.cpp  symbolic.h
source/sympp/node/function/: abs.cpp  abs.h  cos.cpp  cos.h  cosh.cpp  cosh.h  function_interface.cpp  function_interface.h  log.cpp  log.h  pow.cpp  pow.h  sin.cpp  sin.h  sinh.cpp  sinh.h
source/sympp/node/operation/: product.cpp  product.h  summation.cpp  summation.h
source/sympp/node/statement/: statement.cpp  statement.h
source/sympp/node/terminal/: boolean.cpp  boolean.h  constant.cpp  constant.h  integer.cpp  integer.h  number_interface.cpp  number_interface.h  rational.cpp  rational.h  real.cpp  real.h  variable.cpp  variable.h
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  node_types.cpp  sym_functions.cpp
